[package]
name = "dgarden"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = { version = "0.1.6", optional = true }
reqwest = "0.11.11"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Window",
    "HtmlCollection",
    "Element",
    "NodeList",
    "EventTarget",
    "MouseEvent",
    "HtmlLinkElement",
]
