[package]
name = "dgarden"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = { version = "0.1.6", optional = true }
reqwest = { version = "0.11.11", features = ["json",] }
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["v4", "js"] }
async_once = "0.2"
async-mutex = "1.4.0"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Window",
    "HtmlCollection",
    "Element",
    "NodeList",
    "EventTarget",
    "MouseEvent",
    "HtmlLinkElement",
    "Location",
    "DomTokenList",
    "HtmlAnchorElement",
    "HtmlFormElement",
    "FormData",
    "DomStringMap",
]
